hphp/hack/test/typecheck/sealed/enum.php.rust_elab.exp
File "enum.php", line 5, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 7, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 11, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "enum.php", line 11, characters 6-6:
You cannot use sealed enum `A` (Typing[4238])
  File "enum.php", line 5, characters 6-6:
  Declaration is here
